[gd_scene load_steps=14 format=3 uid="uid://j8t0bm46hh8i"]

[ext_resource type="Theme" uid="uid://dylriqvd0gggf" path="res://game_main_theme.tres" id="1_1jdpd"]
[ext_resource type="Script" path="res://Scripts/UI/InfoPanelInNode.gd" id="1_l5tw6"]
[ext_resource type="FontFile" uid="uid://bjxhktv3vfu54" path="res://Fonts/WerdnasReturn.ttf" id="2_8hfgg"]
[ext_resource type="PackedScene" uid="uid://cs4pb1qbaaode" path="res://Scenes/Components/AnimationComponentUI.tscn" id="3_amp5s"]
[ext_resource type="PackedScene" uid="uid://cdj2nrqs4irp1" path="res://Scenes/SkillTreeSystem/FiatCurrencyAnimated.tscn" id="4_8ndmn"]
[ext_resource type="PackedScene" uid="uid://267b2pka2dbq" path="res://Scenes/SkillTreeSystem/BTCCurrencyAnimated.tscn" id="4_lx4gd"]
[ext_resource type="FontFile" uid="uid://dccffhvl0wg7a" path="res://Fonts/alagard.ttf" id="7_oi02n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bbgx6"]
bg_color = Color(0, 1, 0, 0.3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ol8qd"]
bg_color = Color(1, 0, 0, 0.309)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x7yi7"]
bg_color = Color(1, 0.843, 0, 0.572)

[sub_resource type="LabelSettings" id="LabelSettings_sv8do"]
font = ExtResource("2_8hfgg")
font_size = 32

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nnl5h"]
color = Color(0.242523, 0.340218, 0.450725, 1)
thickness = 2

[sub_resource type="LabelSettings" id="LabelSettings_mpxf4"]
font = ExtResource("7_oi02n")

[node name="SkillInfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1jdpd")
script = ExtResource("1_l5tw6")
use_btc_icon = false
can_afford_upgrade_style = SubResource("StyleBoxFlat_bbgx6")
cannot_afford_upgrade_style = SubResource("StyleBoxFlat_ol8qd")
max_ugraded_style = SubResource("StyleBoxFlat_x7yi7")

[node name="AnimationComponent" parent="." instance=ExtResource("3_amp5s")]
alternative_tweening_start = true
tween_time = 0.5
tween_transition = 8
tween_ease = 1
enter_time = 0.4
enter_transition = 11
enter_ease = 1
enter_scale = Vector2(0, 0)
enter_position = Vector2(20, 10)
enter_size = Vector2(0, 0)
enter_rotation = -90.0

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 120)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = ExtResource("1_1jdpd")
alignment = 1

[node name="SkillTitle" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
theme = ExtResource("1_1jdpd")
text = "Skill Title"
label_settings = SubResource("LabelSettings_sv8do")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 171
uppercase = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SkillDescription" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("1_1jdpd")
text = "Skill Description.."
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_nnl5h")

[node name="PriceBackground" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_1jdpd")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PriceBackground"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="FiatTexture" parent="PanelContainer/VBoxContainer/PriceBackground/HBoxContainer" instance=ExtResource("4_8ndmn")]
visible = false
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="BTCTexture" parent="PanelContainer/VBoxContainer/PriceBackground/HBoxContainer" instance=ExtResource("4_lx4gd")]
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="SkillCost" type="Label" parent="PanelContainer/VBoxContainer/PriceBackground/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("1_1jdpd")
text = "1000"
label_settings = SubResource("LabelSettings_mpxf4")
horizontal_alignment = 1
vertical_alignment = 1
